2007-01-05       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-file.in:  added FileSystem.mod to the gm2-libs-pim
	  set of libraries.
	* gm2/TODO:  removed FileSystem.mod from the list
	* gm2/gm2-compiler/P1SymBuild.mod:  added error message
	* gm2/gm2-libs/FIO.mod:  fixed copyright message
	* gm2/gm2-libs/M2RTS.def:  fixed typo.
	* gm2/gm2-libs/libc.def:  added rename function.
	* gm2/gm2-libs/wrapc.def:  modified filesize so that it modifies
	  two unsigned ints as the size, rather than return a long unsigned.
	* gm2/gm2/gm2-libs-ch/libc.c:  added unlink function.
	* gm2/gm2/gm2-libs-ch/wrapc.c:  implemented filesize.
	* gm2/gm2/gm2-libs-pim/FileSystem.def:  improved comments and added
	  more file state to the File record.

2006-12-25       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-file.in:  fixed conditional building of library files.
          Bug reported by Michael Lambert <lambert@psc.edu>.

2006-12-21       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  fixed manual page installation.
	* gm2/lang-options.h:  include -Wlibs=min option.
	* gm2/gm2-libs-min/libc.c:  added parameters to functions.
	* gm2/gm2-libs-min/libc.def:  added.

2006-12-20       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-min:  added
	* gm2/gm2spec.c:  modified to relect introduction of -Wlibs=min
	* gm2/gm2.texi:  document -Wlibs=min
	* gm2/config-lang.in:   include gm2cc to be installed
	* GNU Modula-2 can be built as a cross compiler for the avr
	  microprocessor.

2006-12-18       Gaius Mulley <gaius@gnu.org>

	* gm2/www/index.ms:  updated web page to reflect G5 successful
	  make gm2.paranoid using gcc-3.3.6 and CVS
	  tag D2006.06.23.04.00.00
	* gm2/gccgm2.c:  use integer_type_node instead of boolean_type_node
	  as the size of boolean_type_node can differ from the
	  size of an integer_type_node.
	* make gm2.paranoid works on LP64 opteron with a patched gcc-4.1.0

2006-12-17       Gaius Mulley <gaius@gnu.org>

	* fixed line number debugging information at the end of a